# Categories/dao/models/category.go
@@ -1,39 +1,19 @@
 package models
 
-import (
-	"github.com/aws/aws-sdk-go/aws"
-	"github.com/aws/aws-sdk-go/service/dynamodb"
-)
-
-const (
-	categoriesTableName = "categories"
-)
-
 type CategoryDesc struct {
-	Name            string `json:"name,omitempty"`
-	Description     string `json:"description,omitempty"`
-	MetaDescription string `json:"meta_description,omitempty"`
-	MetaKeyword     string `json:"meta_keyword,omitempty"`
-	MetaTitle       string `json:"meta_title,omitempty"`
+	Name            string `json:"name,omitempty" extensions:"x-omitempty"`
+	Description     string `json:"description,omitempty"  extensions:"x-omitempty"`
+	MetaDescription string `json:"meta_description,omitempty"  extensions:"x-omitempty"`
+	MetaKeyword     string `json:"meta_keyword,omitempty"  extensions:"x-omitempty"`
+	MetaTitle       string `json:"meta_title,omitempty"  extensions:"x-omitempty"`
 }
 
+// @Description Category Model
 type Category struct {
-	CategoryId   int          `json:"category_id"`
-	CategoryDesc CategoryDesc `json:"category_description"`
+	CategoryId   int          `json:"category_id,omitempty"  extensions:"x-omitempty"`
+	CategoryDesc CategoryDesc `json:"category_description,omitempty"  extensions:"x-omitempty"`
 }
 
 type CategoryUpdateInput struct {
 	CategoryDesc CategoryDesc `json:"category_description"`
-}
-
-func (c Category) GetTableName() *string {
-	return aws.String(categoriesTableName)
-}
-
-func (c Category) GetKeyFilter() map[string]*dynamodb.AttributeValue {
-	return map[string]*dynamodb.AttributeValue{
-		"category_id": {
-			S: aws.Int(c.CategoryId),
-		},
-	}
 }
